tests/fixtures/LatestTests/ConstVariableDeclarationTests/errors/str_to_int.fg
/; EXPECT_ERROR: InitializerExpressionTypeMismatch
const x:int = "hello"

